--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,17 @@
-- name: Apply manifests
-  env:
-    KUBECONFIG: /etc/rancher/k3s/k3s.yaml
-    IMAGE: ghcr.io/${{ github.repository_owner }}/cuisinotheque:${{ github.sha }}
-  run: |
-    hostname
-    kubectl version --short
-    kubectl apply -f k8s/
-    kubectl -n cuisinotheque set image deployment/cuisinotheque-web web=$IMAGE
-    kubectl -n cuisinotheque rollout status deployment/cuisinotheque-web --timeout=180s
+deploy:
+  needs: build
+  runs-on: [self-hosted, rpi4]
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Apply manifests
+      env:
+        KUBECONFIG: /etc/rancher/k3s/k3s.yaml
+        IMAGE: ghcr.io/${{ github.repository_owner }}/cuisinotheque:${{ github.sha }}
+      run: |
+        hostname
+        kubectl version --short
+        kubectl apply -f k8s/
+        kubectl -n cuisinotheque set image deployment/cuisinotheque-web web=$IMAGE
+        kubectl -n cuisinotheque rollout status deployment/cuisinotheque-web --timeout=180s
