--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,32 @@
-deploy:
-  needs: build
-  runs-on: [self-hosted, rpi4]
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+name: build-and-deploy
 
-    - name: Apply manifests
-      env:
-        KUBECONFIG: /etc/rancher/k3s/k3s.yaml
-        IMAGE: ghcr.io/${{ github.repository_owner }}/cuisinotheque:${{ github.sha }}
-      run: |
-        hostname
-        kubectl version --short
-        kubectl apply -f k8s/
-        kubectl -n cuisinotheque set image deployment/cuisinotheque-web web=$IMAGE
-        kubectl -n cuisinotheque rollout status deployment/cuisinotheque-web --timeout=180s
+on:
+  push:
+    branches: [ main, master ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Hello test build
+        run: echo "Build job OK"
+
+  deploy:
+    needs: build
+    runs-on: [self-hosted, rpi4]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Apply manifests
+        env:
+          KUBECONFIG: /etc/rancher/k3s/k3s.yaml
+          IMAGE: ghcr.io/${{ github.repository_owner }}/cuisinotheque:${{ github.sha }}
+        run: |
+          hostname
+          kubectl version --short
+          kubectl apply -f k8s/
+          kubectl -n cuisinotheque set image deployment/cuisinotheque-web web=$IMAGE
+          kubectl -n cuisinotheque rollout status deployment/cuisinotheque-web --timeout=180s
