--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,7 @@ jobs:
           KUBECONFIG: /etc/rancher/k3s/k3s.yaml
           IMAGE: ghcr.io/${{ github.repository_owner }}/cuisinotheque:${{ github.sha }}
         run: |
-          hostname
-          kubectl version --short
-          kubectl apply -f k8s/
-          kubectl -n cuisinotheque set image deployment/cuisinotheque-web web=$IMAGE
+          kubectl apply -f cuisinotheque/k8s/
+          kubectl -n cuisinotheque set image deployment/cuisinotheque-web web=$IMAGE || true
           kubectl -n cuisinotheque rollout status deployment/cuisinotheque-web --timeout=180s
+
