--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: IMAGE_PLACEHOLDER
+          image: ghcr.io/wilfriedndr/cuisinotheque:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8000
