--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,6 +20,7 @@ spec:
           ports:
             - containerPort: 8000
           env:
+            # Variables Django
             - name: DJANGO_SETTINGS_MODULE
               valueFrom:
                 configMapKeyRef:
@@ -40,6 +41,34 @@ spec:
                 configMapKeyRef:
                   name: django-config
                   key: PORT
+
+            # Variables Postgres
+            - name: POSTGRES_DB
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_DB
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_USER
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_PASSWORD
+            - name: POSTGRES_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_HOST
+            - name: POSTGRES_PORT
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_PORT
+
           readinessProbe:
             httpGet:
               path: /
