--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,9 @@ jobs:
         run: |
           kubectl apply -f k8s/namespace.yaml
           kubectl apply -f k8s/config.yaml
+          kubectl apply -f k8s/postgres-secret.yaml   # <-- ajoute cette ligne
           kubectl apply -f k8s/deployment.yaml
           kubectl apply -f k8s/ingress.yaml
           kubectl -n cuisinotheque set image deployment/cuisinotheque-web web=$IMAGE || true
           kubectl -n cuisinotheque rollout status deployment/cuisinotheque-web --timeout=180s
+
