--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -71,17 +71,18 @@ spec:
 
           readinessProbe:
             httpGet:
-              path: /
+              path: /health/
               port: 8000
-            initialDelaySeconds: 20
+            initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 2
             failureThreshold: 6
+
           livenessProbe:
             httpGet:
-              path: /
+              path: /health/
               port: 8000
-            initialDelaySeconds: 40
+            initialDelaySeconds: 30
             periodSeconds: 20
             timeoutSeconds: 2
             failureThreshold: 6
