--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -17,3 +17,13 @@ spec:
                 name: cuisinotheque-web
                 port:
                   number: 80
+    - host: "192.168.1.2"
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: cuisinotheque-web
+                port:
+                  number: 80
