--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -69,6 +69,34 @@ spec:
                   name: postgres-secret
                   key: POSTGRES_PORT
 
+          # Healthchecks
+          livenessProbe:
+            httpGet:
+              path: /health/
+              port: 8000
+            initialDelaySeconds: 15
+            periodSeconds: 30
+            timeoutSeconds: 5
+            failureThreshold: 3
+
+          readinessProbe:
+            httpGet:
+              path: /health/
+              port: 8000
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+
+          volumeMounts:
+            - name: media-storage
+              mountPath: /app/media
+
+      volumes:
+        - name: media-storage
+          persistentVolumeClaim:
+            claimName: cuisinotheque-media-pvc
+
 ---
 apiVersion: v1
 kind: Service
@@ -81,3 +109,16 @@ spec:
   ports:
     - port: 80
       targetPort: 8000
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: cuisinotheque-media-pvc
+  namespace: cuisinotheque
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
