--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: build-and-deploy
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main, master, dev ]
 
 permissions:
   contents: read
