--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Apply manifests
         env:
           KUBECONFIG: /etc/rancher/k3s/k3s.yaml
-          IMAGE: ghcr.io/${{ github.repository_owner }}/cuisinotheque:${{ github.sha }}
+          IMAGE: ghcr.io/${{ github.repository_owner }}/cuisinotheque:latest
         run: |
           # Namespace
           kubectl apply -f k8s/namespace.yaml
