--- a/k8s/config.yaml
+++ b/k8s/config.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: cuisinotheque
 data:
   DJANGO_SETTINGS_MODULE: "cuisinotheque.settings"
-  ALLOWED_HOSTS: "rpi4, rpi4.local, cuisinotheque.local, 192.168.1.2"
+  ALLOWED_HOSTS: "*"
   PORT: "8000"
 ---
 apiVersion: v1
