--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,8 @@ jobs:
 
       - name: Apply manifests
         env:
-          KUBECONFIG: /etc/rancher/k3s/k3s.yaml
+          KUBECONFIG: /home/wilfried/.kube/config
+
           IMAGE: ghcr.io/${{ github.repository_owner }}/cuisinotheque:latest
         run: |
           # Namespace
