Fix Traefik ingress: allow access via IP and any host

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -6,9 +6,9 @@ metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
+  ingressClassName: traefik
   rules:
-    - host: cuisinotheque.local
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
