--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,9 @@ jobs:
 
           IMAGE: ghcr.io/${{ github.repository_owner }}/cuisinotheque:latest
         run: |
+          kubectl version --client
+          kubectl get ns
+
           # Namespace
           kubectl apply -f k8s/namespace.yaml
           
